test/functions/iterators/Issue21265.1.good
Issue21265.chpl:6: error: iterators with no reachable 'yield' statements must declare their return type
